--- a/TKV2025_soubory/sheet012.htm
+++ b/TKV2025_soubory/sheet012.htm
@@ -46,8 +46,8 @@ else
 
 <body link=blue vlink=purple class=xl70>
 
-<table border=0 cellpadding=0 cellspacing=0 width=11567 style='border-collapse:
- collapse;table-layout:fixed;width:8695pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=11662 style='border-collapse:
+ collapse;table-layout:fixed;width:8766pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
  <col class=xl70 width=205 style='mso-width-source:userset;mso-width-alt:7497;
@@ -251,8 +251,8 @@ else
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
- <col class=xl70 width=80 style='mso-width-source:userset;mso-width-alt:2925;
- width:60pt'>
+ <col class=xl70 width=175 style='mso-width-source:userset;mso-width-alt:6400;
+ width:131pt'>
  <col class=xl70 width=105 style='mso-width-source:userset;mso-width-alt:3840;
  width:79pt'>
  <col class=xl70 width=50 style='width:38pt'>
@@ -394,7 +394,7 @@ else
   <td class=xl70 width=105 style='width:79pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
-  <td class=xl70 width=80 style='width:60pt'></td>
+  <td class=xl70 width=175 style='width:131pt'></td>
   <td class=xl70 width=105 style='width:79pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
@@ -410,7 +410,7 @@ else
   <td class=xl70 width=105 style='width:79pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=14 height=58 class=xl178 style='height:43.5pt'><span
+  <td colspan=14 height=58 class=xl179 style='height:43.5pt'><span
   style='mso-spacerun:yes'> </span>TOUR KRAJE VYSOČINA 2025 - PŘIBYSLAV - 501
   DO</td>
   <td class=xl143>&nbsp;</td>
@@ -1088,7 +1088,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td class=xl169 align=right style='border-left:none'>26</td>
+  <td class=xl169 align=right style='border-left:none'>27</td>
   <td class=xl96></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl163>&nbsp;</td>
@@ -1217,11 +1217,11 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>19</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>13850</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>20</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>14600</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>645
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>676
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1355,16 +1355,16 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Ptáček Radim [CZE071042]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>20</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>13000</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>21</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>13650</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>605
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>632
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Počet odehraných kol</td>
-  <td class=xl169 align=right style='border-top:none;border-left:none'>22</td>
+  <td class=xl169 align=right style='border-top:none;border-left:none'>23</td>
   <td class=xl98></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1588,7 +1588,7 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>8850</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>412
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>410
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1812,16 +1812,16 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Šmíd Michal [CZE064383]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>16</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>7700</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>17</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>8150</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>358
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>377
   Kč</td>
   <td class=xl70></td>
   <td class=xl71>Odměny</td>
-  <td colspan=2 class=xl190 style='border-right:.5pt solid black;border-left:
-  none'>2 632 Kč</td>
+  <td colspan=2 class=xl191 style='border-right:.5pt solid black;border-left:
+  none'>2 730 Kč</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2040,11 +2040,11 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Močuba Jiří [CZE062045]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>19</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>7450</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>20</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>7800</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>347
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>361
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -2178,11 +2178,11 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Březina Lukáš [CZE057909]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>18</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>5700</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>19</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>5950</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>265
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>275
   Kč</td>
   <td class=xl70></td>
   <td colspan=3 class=xl71>Žebříček vítězů</td>
@@ -2524,8 +2524,8 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>7</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Hladký Pavel [CZE071237]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>11</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>5150</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>12</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>5700</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Pořadí</td>
@@ -2683,9 +2683,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>750</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>750</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2704,15 +2706,15 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>8</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Škareda Matěj [CZE069713]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>13</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>4050</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>14</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>4400</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
   <td class=xl82 style='border-top:none'>Strašil Pavel [CZE015487]</td>
-  <td class=xl145 style='border-left:none'>13</td>
+  <td class=xl145 style='border-left:none'>14</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2867,9 +2869,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Močuba Jiří [CZE062045]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>650</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Ptáček Radim [CZE071042]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>650</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3051,9 +3055,11 @@ else
   [CZE068995]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>550</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Hladký Pavel [CZE071237]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>550</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3237,9 +3243,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Ptáček Radim [CZE071042]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>450</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Šmíd Michal [CZE064383]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>450</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3420,9 +3428,11 @@ else
   [CZE069712]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Škareda Matěj [CZE069713]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3601,9 +3611,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Šmíd Michal [CZE064383]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Močuba Jiří [CZE062045]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3773,9 +3785,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Březina Lukáš [CZE057909]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>7</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Březina Lukáš [CZE057909]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -15121,7 +15135,7 @@ else
   <td width=105 style='width:79pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
-  <td width=80 style='width:60pt'></td>
+  <td width=175 style='width:131pt'></td>
   <td width=105 style='width:79pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
